front-end/src/assets/css/general.css
/* ... */
/* 
.HeroGroup {
  margin: 0 auto;
  text-align: center;
  width: 100%;
  height: 100%;
} */

@media (max-width: 1024px) {
  .intro-section {
		padding-top: 50px;
	}

}

@media (max-width: 479px) {
  .intro-section {
		height: 100%;
    /* padding-top: 40px;
    padding-right: 20px;
    padding-left: 20px; */
    min-height: 79vh;

  }

  /* .intro-section {
    height: 300px;
    border: 1px solid red;
  } */

  .intro-section .bg-stretch {
    /* background-image: url("../images/finaliphone678.png"); */
    background-image: url("../images/isthis3.png");
    background-size: cover;


  }

  .intro-section .bg-stretch-2 {
    background-image: url("../images/Untitled-2.png");
    background-size: cover;
  


  }
  
  .intro-section {
  }

  .bg-stretch-2 {
  }

  .bg-stretch .slide-frame .text {
    padding: 15px;    
  
  }



  .bg-stretch .slide-frame .text .slide-title {
    font-size: 7.3vw;
  }

  /* .bg-stretch .slide-frame .text p {
    padding-top: 10px;
    font-size: 2.5vw;
  } */

  .bg-2-stretch .slide-2-frame .text p {
    display: none;
  }

  .bg-2-stretch {
  }

  .bg-2-stretch .slide-2-frame .text {
    padding: 0px 20px 0px 20px;

  }


  .bg-2-stretch .slide-2-frame .text .slide-title {
    font-size: 8vw;

  }

/*   
  .intro-section .slide-frame .text h1 {
    display:none;
  }

  .intro-section .slide-frame .text p {
    display:none;

  } */
  
  /* .intro-section .slide-frame .text button {
    display:none;

  } */

    /* padding-bottom: 100px; */


  .anchor-wrap {
    position: absolute;
    bottom: 0px;
    left: 0;
    margin-bottom: -20px;
    width: 100%;
}

  


}

.jumbo {
  width: 100%;
  height: 920px;
  background-size: contain;
  background-repeat: no-repeat;

  background-position: center;
}

.intro-section .bg-stretch p {
  font-size: 1.4vw;
  font-weight: 1200;
}

.intro-section .bg-stretch h1 {
  font-family: 'GTEestiDisplay-Medium',-apple-system,system-ui,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen-Sans,Ubuntu,Cantarell,'Helvetica Neue',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  font-weight: 500;
  margin: 0;
  color: black;
  font-size: 3.3vw;
  line-height: 1.2;
  opacity: 0;
  animation: HeroAnimation;
  animation-duration: 3s;
  animation-delay: 0.1s;
  animation-fill-mode: forwards;
  animation-timing-function: cubic-bezier(0.2, 0.8, 0.2, 1);
}
/* 
@media (max-width: 1199px) {
  .intro-section .bg-stretch h1 {
    font-size: 5rem;
  }

  .intro-section .bg-stretch p {
    font-size: 1.2rem;
  }
}
.intro-section .bg-stretch p {
  color: black;
  font-size: vw;
  line-height: 1.5;
  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
  opacity: 0;
} */

.intro-section .bg-stretch button {
  cursor: pointer;
  font-size: 17px;
  font-weight: 600;
  color: white;
  text-transform: uppercase;
  background: rgba(0, 0, 0, 0.7);
  padding: 9px 20px;
  margin-top: 20px;
  border: 1px solid rgba(255, 255, 255, 0.25);
  border-radius: 20px;
  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
}

.Hero button:hover {
  background: #fc766a;
}

.Hero a:hover {
  background: white;
  color: black;
}



.bg-stretch .slide-frame {
  display: block;
  /* margin-left: 100px; */
  margin: 0 80;
}

.bg-stretch .slide-frame {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    /* justify-content: center; */
    /* align-items: center; */

}

.bg-2-stretch .slide-2-frame {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  /* justify-content: center; */
  /* align-items: center; */


}

.bg-2-stretch .slide-2-frame {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  /* justify-content: center; */
  /* align-items: center; */


}


.bg-stretch .text {
  padding-top: 0;
  align-items: center;
  padding:60px;

}
/* 
@media (max-width: 650px) {
  .Hero .intro-section .bg-stretch {
    background: url("../images/wallpaper9_mobile.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    padding-top: 200px;
    align-items: flex-start;

  }

  .bg-stretch .text {
    align-items: flex-start;
   
  }


  .Hero button {
    margin-top: 30px;
  }

  .bg-stretch .text h1 {
    font-size: 6vw;
  }

  .bg-stretch .text p {
    font-size: 2vw;
    padding-top: 10px;
  }

  svg {
    display: none;
  }
  .down-arrow {
    bottom: 0px;
  }
} */

@keyframes HeroAnimation {
  0% {
    opacity: 0;
    transform: translateY(20px);
  }
  100% {
    opacity: 1;
    transform: translateY(0px);
  }
}

.down-arrow {
  display: flex;
  justify-content: center;
  bottom: 90px;
  width: 100%;
  position: relative;
}
.down-arrow:hover {
  background: none;
}
.Hero svg {
  position: relative;
  bottom: 30px;
}

.anchor {
  position: relative;
  display: inline-block;
  vertical-align: top;
  width: 56px;
  height: 56px;
  background: white;
  border-radius: 50%;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.1);
  -webkit-animation-duration: 4s;
  animation-duration: 4s;
  -webkit-animation-name: bounce;
  animation-name: bounce;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  will-change: translate;
}

.anchor:hover span {
  -webkit-animation-duration: 4s;
  animation-duration: 5s;
  -webkit-animation-name: bounce;
  animation-name: bounce;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
  -webkit-animation-play-state: running;
  animation-play-state: running;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  will-change: translate;
}

.anchor span {
  position: absolute;
  top: 24px;
  left: 16px;
  width: 24px;
  height: 12px;
  overflow: hidden;
}
/* ... */

